# Freenet-web

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.agent/skills/deploy_freenet_web_contract/: SKILL.md
beautiful-static-web/: Cargo.toml  Makefile  Makefile.toml
beautiful-static-web/contracts/simple-web-contract/: Cargo.toml
beautiful-static-web/contracts/simple-web-contract/src/: lib.rs
beautiful-static-web/contracts/web-container-contract/: Cargo.toml
beautiful-static-web/delegates/web-delegate/: Cargo.toml
beautiful-static-web/delegates/web-delegate/src/: lib.rs
beautiful-static-web/web/: index.html  style.css
delegates/web-delegate/: Cargo.toml
delegates/web-delegate/src/: lib.rs
public/: index.html
scripts/: deploy.sh
signer/: Cargo.toml
signer/src/: main.rs
web-container-contract/: Cargo.toml
web-container-contract/src/: lib.rs
