[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
