[package]
name = "web-container-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
freenet-stdlib = { version = "0.1", features = ["contract"] }
freenet-macros = "0.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
bincode = "1.3"

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []
